# webrtcbin_playground

./: Cargo.toml  LICENSE  README.md  send_receive.html  send_receive_no_trickle.html  server_answer.html
src/: api.rs  client_offer.rs  domain.rs  gstlib.rs  main.rs  moz_ice.rs  send_receive.rs
